# healthy-habits-tracker

./: .env_example  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_time_to_complete.py  0004_alter_habit_lead_time.py  0005_habit_date_last_execution.py  0006_alter_habit_periodicity.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
