[tool.poetry]
name = "healthy habits tracker"
version = "0.1.0"
description = ""
authors = ["Yana Sozonova <ynakochneva@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
